firefly: fix error: set vdd_log voltage to 1.1v
Change-Id: I18395f493e00f02d65bbdbfae13eaa4a7ad02c65

--- a/arch/arm/dts/rk3399-firefly.dts
+++ b/arch/arm/dts/rk3399-firefly.dts
@@ -160,7 +160,7 @@
 		regulator-boot-on;
 		regulator-min-microvolt = <430000>;
 		regulator-max-microvolt = <1400000>;
-		regulator-init-microvolt = <110000>;
+		regulator-init-microvolt = <1100000>;
 	};
 
 	vccadc_ref: vccadc-ref {
