--- a/configs/firefly-rk3328_defconfig
+++ b/configs/firefly-rk3328_defconfig
@@ -59,8 +59,6 @@ CONFIG_CLK=y
 CONFIG_SPL_CLK=y
 CONFIG_ROCKCHIP_GPIO=y
 CONFIG_SYS_I2C_ROCKCHIP=y
-CONFIG_DM_KEY=y
-CONFIG_ADC_KEY=y
 CONFIG_GPIO_KEY=y
 CONFIG_RK_KEY=y
 CONFIG_MISC=y
@@ -119,3 +117,5 @@ CONFIG_USE_TINY_PRINTF=y
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_ERRNO_STR=y
 CONFIG_TEST_ROCKCHIP=y
+CONFIG_ADC=y
+
