arm: dts: set usb vbus-supply & use uboot dtb
Change-Id: I5116a4af65e082014211dfc29c13661d4e574119

--- a/arch/arm/dts/rk3328-roc-cc.dts
+++ b/arch/arm/dts/rk3328-roc-cc.dts
@@ -86,6 +86,7 @@
 	status = "okay";
 };
 
+
 &u2phy {
         status = "okay";
 };
@@ -112,10 +113,8 @@
 };
 
 &usb_host0_xhci {
-	//vbus-supply = <&vcc5v0_host_xhci>;
-	vbus-supply = <&vcc5v0_otg>;
+	vbus-supply = <&vcc5v0_host_xhci>;
 	status = "okay";
-	maximum-speed = "high-speed";
 };
 
 &i2c1 {
